# AlgoC

./: .gitignore  README.md
TD/TD6 - TD7/: CMakeLists.txt  main.c
TP10/: CMakeLists.txt  heap.c  heap.h  main.c
TP5/: CMakeLists.txt  bakery.c  prioqueue.c  queue.c  queue.h
